support setting max item size, default to 1MB
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/memcached.conf.j2
+++ b/templates/memcached.conf.j2
@@ -28,6 +28,9 @@ logfile {{ memcached_log_file }}
 # memory
 -m {{ memcached_size_mb }}
 
+# Adjusts max item size. (default: 1m, min: 1k, max: 1024m)
+-I {{ memcached_max_item_size }}
+
 # Default connection port is 11211
 -p {{ memcached_port }}
 
